# Clutter

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  config.py  dbexample.json  deploy.sh  docker-compose.yml  lint.sh  main.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yaml  bandit.yml  codespell.yaml  isort_fix.py  lint.py  lint.yaml  lint.yml  mypy.yaml  mypy.yml  poetry.yml  pyright.yml
bot/: __main__.py  config.example.json5  config.json5  config.yml  lint.txt  main.py  misc.json5
bot/assets/: colors.json5  emojis.json5
bot/core/: bot.py  command_tree.py  context.py  error_handler.py  errors.py  interaction.py  slash_tree.py
bot/i18n/: en-US.json5  tr.json5
bot/modules/: README.txt  error_handler.py  misc.py  miscellaneous.py  owner.py
bot/translations/: en-US.json5
bot/utils/: __init__.py  checks.py  color.py  embed.py  errors.py  i18n.py  listify.py  misc.py  text_file.py
bot/utils/checks/: check.py
bot/utils/database/: __init__.py  cacher.py  manager.py  misc.py
bot_new/: __main__.py  config.example.json5
bot_new/core/: bot.py  command_tree.py  context.py  error_handler.py
bot_old/: config.example.json5
bot_old/core_old/: bot.py  context.py
bot_old/i18n_old/: en-US.json5
bot_old/modules_old/: misc.py
clutter/: __init__.py  __main__.py  config.example.json5
clutter/cogs/: error_handler.py  miscellaneous.py  owner.py
clutter/core/: __init__.py  bot.py  command_tree.py  context.py  errors.py  interaction.py
clutter/i18n/: _naming.txt  en-US.json5
clutter/utils/: LICENSE  __init__.py  format_as_list.py  run_in_executor.py  text_file.py
clutter/utils/color/: __init__.py  color.py  misc.py
clutter/utils/db/: __init__.py  cacher.py  manager.py  misc.py
clutter/utils/embed/: __init__.py  creator.py  (+1 more)
modules/: bot_config.py  cog_template.txt  error_handler.py
modules/misc/: commands.json  help.py  info.py  invite.py  ping.py
utils/: docs.md  init.py
utils/content/: chalk.py  checks.py  cmd.json  cmd.py  embed.py  fancy_desc.py  get_prefix.py  get_txt.py  mod_event.py  mongodb.py
(+9 files in other folders)
