[tool.poetry]
name = "clutter-bot"
version = "0.2.0"
description = "Clutter is a multipurpose, compact and easy to use Discord bot."
authors = [ "Clutter Development" ]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "master", extras = [ "speed" ] }
jishaku = "*"
json5 = "*"
lru-dict = "*"
motor = "*"
sentry-sdk = "*"
typing-extensions = "*"
uvloop = "*"

[tool.poetry.dev-dependencies]
black = "*"
flynt = "*"
isort = "*"
unimport = "*"

[tool.black]
line-length = 79
preview = true

[tool.isort]
py_version = 310
extra_standard_library = ["typing_extensions"]
add_imports = ["from __future__ import annotations"]
line_length = 79
profile = "black"
combine_as_imports = true
combine_star = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingModuleSource = "error"
reportAssertAlwaysTrue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportUnsupportedDunderAll = "error"
reportUnusedExpression = "error"
reportWildcardImportFromLibrary = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportImportCycles = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportTypeCommentUsage = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUnusedClass = "error"
reportUnusedVariable = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
